--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -6,11 +6,18 @@
     </div>
     <br>
     <br>
+    <button id="join_room_button">Join Room</button>
     <div class="container" id="room_creator">
         <b><input type="text" id="roomName" placeholder="RoomName" /></b>
         <button id="sendbutton">Create</button>
     </div>
 
+    <br>
+    <div class="input-group mb-3" id="join_room_list">
+        <select class="custom-select" id="room_selector" name="room_drop_down">
+            <option selected>Choose Series</option>
+        </select>
+    </div>
 
 
 
@@ -28,21 +35,35 @@
      <h3 style='color: #ccc;font-size: 30px;'>No message yet</h3>
     Send To:  <input type="text" id="send_to_username">
     Messager:  <input type="text" id="private_message">
-    <button id="send_private_message">Send</button>
+
 
     <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
+        $('#room_join_list').hide();
+
 
         var socket =io.connect('http://' +document.domain + ':' + location.port + '/draft2', {transports: ['websocket']});
 
         $('#sendbutton').on('click', function() {
             console.log($('#roomName').val());
             socket.emit('join', {'draft_name' : $('#roomName').val()});
+        });
 
+        $('#join_room_button').on('click', function {
+            socket.emit('get_room_list');
+         });
+
+        socket.on('rec_room_list', function(msg) {
+           drafts_data = '';
+                $.each(msg, function() {
+                    drafts_data += '<option value=\"' +$(this).attr('draft_name')+ '</option>';
+                });  // end each
+                $('#room_selector').append(drafts_data);
+            $('#room_join_list').show();
         });
 
         socket.on('new draft', function(msg) {
-            $('#messages').append('<li>'+ msg.draft_name +' draft created by' + msg.user +'</li>');
+            $('#messages').append('<li>'+ msg.draft_name +' draft created by ' + msg.user +'</li>');
         });
 
         // **var private_socket = io.connect('http://' +document.domain + ':' + location.port +'/draft2', {transports: ['websocket']})
