--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -50,7 +50,7 @@
         });
 
         $('#join_room_button').on('click', function() {
-            print('join room button')
+            console.log('join room button')
             socket.emit('get_room_list');
          });
 
