--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -56,6 +56,7 @@
 
         socket.on('rec_room_list', function(msg) {
            drafts_data = '';
+           print('in the rec_room_list function')
                 $.each(msg, function() {
                     drafts_data += '<option value=\"' +$(this).attr('draft_name')+ '</option>';
                 });  // end each
