websockets with char and room

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -58,7 +58,7 @@
            drafts_data = '';
            console.log('in the rec_room_list function')
                 $.each(msg, function() {
-                    drafts_data += '<option value> +$(this).attr('draft_name')+ '</option>';
+                    drafts_data += '<option value>' +$(this).attr('draft_name')+ '</option>';
                 });  // end each
                 console.log(drafts_data)
                 $('#room_selector').append(drafts_data);
