websockets with char and room

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -63,7 +63,7 @@
                 });  // end each
                 console.log(drafts_data)
                 $('#room_selector').append(drafts_data);
-            $('#room_join_list').show();
+            $('#join_room_list').show();
         });
 
         socket.on('new draft', function(msg) {
