--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -60,7 +60,7 @@
          });
 
         socket.on('user_join_room', function(msg) {
-            $('#messages').append('<li>'+ msg.user +' has joined the room</li>');
+            $('#room_selector').append('<li>'+ msg.user +' has joined the room</li>');
         });
 
         socket.on('rec_room_list', function(msg) {
