--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -66,6 +66,7 @@
         socket.on('rec_room_list', function(msg) {
            $('#room_selector option').remove();
            drafts_data = '';
+           drafts_data += '<option selected>Choose Draft</option>';
            console.log(msg)
            console.log('in the rec_room_list function')
                 $.each(msg, function() {
