--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -42,7 +42,7 @@
         $('#join_room_list').hide();
 
 
-        var socket =io.connect('http://' +document.domain + ':' + location.port + '/draft2', {transports: ['websocket']});
+        var socket =io.connect('http://' +document.domain + ':' + location.port + '/draft/draft2', {transports: ['websocket']});
 
         $('#sendbutton').on('click', function() {
             console.log($('#roomName').val());
