--- a/src/templates/log_in.html
+++ b/src/templates/log_in.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-
+<section id="login_form">
 {{  wtf.quick_form(form)  }}
-
+</section>
 {% endblock %}
