--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,6 +1,15 @@
 body{
 background-color: #FFE4C4;
 }
+#login_form{
+display:flex;
+background-color: #FFE4C4
+border-style: solid;
+border-width: 2px;
+width: 400px;
+
+
+}
 
 #login-form{
 margin-top: 100px;
