--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -7,8 +7,8 @@ background-color: #FFE4C4
 border-style: solid;
 border-width: 2px;
 width: 400px;
-
-
+margin: 50px;
+padding: 10px;
 }
 
 #login-form{
