--- a/src/templates/log_in.html
+++ b/src/templates/log_in.html
@@ -2,7 +2,9 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-<div class="container-sm" id="login_form">
+<div class="container"></div>
+<div class="container" id="login_form">
 {{  wtf.quick_form(form)  }}
 </div>
+<div class="container"></div>
 {% endblock %}
