--- a/src/templates/log_in.html
+++ b/src/templates/log_in.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container"></div>
-<div class="container" id="login_form">
+<div class="container-sm" id="login_form">
 {{  wtf.quick_form(form)  }}
 </div>
 <div class="container"></div>
