--- a/src/templates/log_in.html
+++ b/src/templates/log_in.html
@@ -2,9 +2,12 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-<div class="container"></div>
-<div class="container" id="login_form">
+
+<div class="page-header" id="login_form">
+    <h1>Login</h1>
+<div/>
+<div class="col-md-6">
 {{  wtf.quick_form(form)  }}
 </div>
-<div class="container"></div>
+
 {% endblock %}
