--- a/src/templates/log_in.html
+++ b/src/templates/log_in.html
@@ -7,7 +7,7 @@
     <h1>Login</h1>
 <div/>
 
-<div class="col-md-8">
+<div class="col-md-8" id="loginform">
 <br>
 <br>
 {{  wtf.quick_form(form)  }}
