adding new chat room functionality

--- a/src/templates/log_in.html
+++ b/src/templates/log_in.html
@@ -15,7 +15,7 @@
 
 <p>
     New User?
-    <a href="{{  url_for('register')  }}">
+    <a href='/register'>
         Click here to register
     </a>
 </p>
