--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,6 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
     <ul class="nav navbar-nav navbar-right">
+        <li><a href="{{  url_for('home_template')  }}">Home</a></li>
         {% if current_user.is_authenticated %}
         <li><a href="{{  url_for('logout')  }}">Log Out</a></li>
         {% else %}
