--- a/src/templates/create_pool.html
+++ b/src/templates/create_pool.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+
 {% block content %}
 
-<h1>Create Pool</h1>
-<h3>{{  message  }}</h3>
+<div class="page-header" id="Create_Pool">
+    <h1>Create Pool</h1>
+</div>
 
-<form method="post">
-    <label>Pool Name</label>
-    <input type="text" name="room_name">
-    <br>
+<div class="col-md-3" id="createpool">
+<br>
+<br>
+{{  wtf.quick_form(form)  }}
+</div>
 
-    <label>Members:</label>
-    <input type="text" name="members">
-    <br>
-    <button type="submit">Submit</button>
-</form>
+
 
 {% endblock %}
