--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -2,7 +2,15 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class="flashes">
+            {% for message in messages %}
+            <li>{{  message  }}</li>
+            {% endfor %}
+        </ul>
+    {% endif  %}
+{% endwith %}
 <div class="page-header" id="register_form">
     <h1>Register</h1>
 </div>
