adding new chat room functionality

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -20,7 +20,7 @@
 <h3>Members</h3>
 <ul>
     {% for member in room_members %}
-        <li>{{  member.username  }}</li>
+        <li>{{  member._id.username  }}</li>
     {% endfor %}
 </ul>
 
