adding new chat room functionality

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Welcome to Pool: {{room:name}}</h1>
+<h1>Welcome to Pool: {{room_name}}</h1>
 
 <button type="button" id="load_older_messages_btn">Load Older Messages</button>
 <div id="messages">
