adding new chat room functionality

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -32,6 +32,7 @@ $(document).ready(function() {
         socket.emit('join_room', {
             username: "{{ username }}",
             room: "{{ room_data._id }}"
+            console.log({{ username}}, {{room_data._id }});
         });  // end socket connect
 
         //let message_input = document.getElementById('message_input');
