--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -9,7 +9,10 @@
     {% for message in messages %}
     <div><b>{{ message.sender }}&nbsp;[{{ message.created_at }}]&nbsp;</b> {{  message.text }}</div>
     {% endfor %}
+<ul id="msg_list">
 
+        <li>{{  member['_id']['username']  }}</li>
+</ul>
 </div>
 
 <form id="message_input_form">
@@ -85,9 +88,10 @@ $(document).ready(function() {
 
     socket.on('receive_message', function(data) {
         console.log(data);
-        const newNode = document.createElement('div');
-        newNode.innerHTML = `<b>${data.username}&nbsp;[$(data.created_at}]:&nbsp;</b> ${data.message}`;
-        document.getElementById('messages').appendChild(newNode);
+        $('#msg_list').append('<li>'+ data.username +': ' + data.message</li>');
+        //const newNode = document.createElement('div');
+        //newNode.innerHTML = `<b>${data.username}&nbsp;[$(data.created_at}]:&nbsp;</b> ${data.message}`;
+        //document.getElementById('messages').appendChild(newNode);
     });
 
     socket.on('join_room_announcement', function(data) {
