--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -88,7 +88,7 @@ $(document).ready(function() {
 
     socket.on('receive_message', function(data) {
         console.log(data);
-        $('#msg_list').append('<li>'+ data.username +': ' + data.message'</li>');
+        $('#msg_list').append('<li>'+ data.username +': ' + data.message +'</li>');
         //const newNode = document.createElement('div');
         //newNode.innerHTML = `<b>${data.username}&nbsp;[$(data.created_at}]:&nbsp;</b> ${data.message}`;
         //document.getElementById('messages').appendChild(newNode);
