adding new chat room functionality

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -9,12 +9,10 @@
     {% for message in messages %}
     <div><b>{{ message.sender }}&nbsp;[{{ message.created_at }}]&nbsp;</b> {{  message.text }}</div>
     {% endfor %}
-<ul id="msg_list">
 
-
-</ul>
 </div>
-
+<ul id="msg_list"></ul>
+<br>
 <form id="message_input_form">
     <input type="text" id="message_input" placeholder="Enter your message here">
     <button type="submit">Send</button>
