--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -97,11 +97,12 @@ $(document).ready(function() {
 
     socket.on('join_room_announcement', function(data) {
         console.log(data)
-        if (data.username !== "{{ username }}") {
-            const newNode = document.createElement('div');
-            newNode.innerHTML = `<b>${data.username}</b> has joined the room`;
-            document.getElementById('messages').appendChild(newNode);
-        }
+        $('#msg_list').append('<li>some arsehole joined</li>');
+        //if (data.username !== "{{ username }}") {
+        //    const newNode = document.createElement('div');
+        //    newNode.innerHTML = `<b>${data.username}</b> has joined the room`;
+        //    document.getElementById('messages').appendChild(newNode);
+       // }
     });
 
     socket.on('leave_room_announcement', function(data) {
