--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -32,7 +32,7 @@ $(document).ready(function() {
     var socket =io.connect('http://' +document.domain + ':' + location.port, {transports: ['websocket']});
 
     socket.on('connect', function() {
-        console.log({{room_data._id }});
+        console.log({{room_data._id }})
         socket.emit('join_room', {
             username: "{{ username }}",
             room: "{{ room_data._id }}"
