--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -28,14 +28,14 @@
 </ul>
 
 <script>
-//$(document).ready(function() {
+$(document).ready(function() {
     var socket =io.connect('http://' +document.domain + ':' + location.port, {transports: ['websocket']});
 
     socket.on('connect', function() {
         console.log({{  room_data.username  }});
         socket.emit('join_room', {
             username: "{{ username }}",
-            room: "{{ room_data._id }}"
+            room: "{{ room_data.room_name }}"
         });  // end socket connect
 
         //let message_input = document.getElementById('message_input');
@@ -48,7 +48,7 @@
                 console.log(message);
                 socket.emit('send_messages', {
                     username: "{{ username }}",
-                    room: "{{ room_data._id }}",
+                    room: "{{ room_data.room_name }}",
                     message: message
                 })
             }
@@ -83,7 +83,7 @@
     window.onbeforeunload = function () {
         socket.emit('leave_room', {
             username: "{{ username }}",
-            room: "{{ room_data._id }}"
+            room: "{{ room_data.room_name }}"
         })
     };
 
@@ -114,6 +114,6 @@
     });
 
 
-//}); //end ready
+}); //end ready
 </script>
 {% endblock %}
