--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -32,7 +32,7 @@ $(document).ready(function() {
     var socket = io.connect('http://' +document.domain + ':' + location.port, {transports: ['websocket']});
 
     socket.on('join room announcement', function(data) {
-        console.log(data.username);
+        console.log({{ username }});
         $('#msg_list').append('<li>some arsehole joined</li>');
         //if (data.username !== "{{ username }}") {
         //    const newNode = document.createElement('div');
