--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -100,7 +100,7 @@ $(document).ready(function() {
     socket.on('receive message', function(data) {
         console.log(data);
         console.log("in receive socket");
-        $('#msg_list').append('<li>'+ data.username +': ' + data.message +'</li>');
+        $('#msg_list').append('<li><b>'+ data.username +': <b>' + data.message +'</li>');
         //const newNode = document.createElement('div');
         //newNode.innerHTML = `<b>${data.username}&nbsp;[$(data.created_at}]:&nbsp;</b> ${data.message}`;
         //document.getElementById('messages').appendChild(newNode);
@@ -108,7 +108,7 @@ $(document).ready(function() {
 
     socket.on('join_room_announcement', function(data) {
         console.log(data);
-        $('#msg_list').append('<li>some arsehole joined</li>');
+        $('#msg_list').append('<li><b>some arsehole joined<b></li>');
         //if (data.username !== "{{ username }}") {
         //    const newNode = document.createElement('div');
         //    newNode.innerHTML = `<b>${data.username}</b> has joined the room`;
