--- a/src/templates/create_pool.html
+++ b/src/templates/create_pool.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-
+<div class="formwrapper">
 <div class="page-header" id="Create_Pool">
     <h1>Create Pool</h1>
 </div>
@@ -12,7 +12,7 @@
 <br>
 {{  wtf.quick_form(form)  }}
 </div>
-
+</div>
 
 
 {% endblock %}
