--- a/src/templates/create_pool.html
+++ b/src/templates/create_pool.html
@@ -14,5 +14,30 @@
 </div>
 </div>
 
+<script>
+$(document).ready(function() {
+    $('#series').change(function() {
+        $('#race option').remove();
+        $.ajax({
+            type: "GET",
+            url: "/ajax_get_races",
+            processData: "false",
+            data: {series: $('select[name="series"]').val()},
+            dataType:"json",
+            success: function(data) {
+                console.log(data);
+                race_data = '';
+                $.each(data, function() {
+                    race_data += '<option value=\"' +$(this).attr('race_id')+ '\">'+ $(this).attr('race_name') + ' @ ' + $(this).attr('track') +'</option>';
+                });  // end each
+                $('#race').append(race_data);
+            }  //end success
+        });  //end ajax
+    });  // end process input
+
+});
+
+</script>
+
 
 {% endblock %}
