--- a/src/templates/create_pool.html
+++ b/src/templates/create_pool.html
@@ -29,7 +29,7 @@ $(document).ready(function() {
                 race_data = '';
                 $.each(data, function() {
                     race_id = toString($(this).attr('race_id'));
-                    race_data += '<option value=\"' +$(this).attr('race_id').toString()+ '\">'+ $(this).attr('race_name') + ' @ ' + $(this).attr('track') +'</option>';
+                    race_data += '<option value=\"' +$(this).attr('race_id')+ '\">'+ $(this).attr('race_name') + ' @ ' + $(this).attr('track') +'</option>';
                 });  // end each
                 $('select[name="race"]').append(race_data);
             }  //end success
