--- a/src/templates/create_pool.html
+++ b/src/templates/create_pool.html
@@ -11,6 +11,12 @@
 <br>
 <br>
 {{  wtf.quick_form(form)  }}
+<form action=""  method="post" id="selectRace" name="race">
+    {{ form.hidden.tag() }}
+    <p>
+        Race: {{  form.races()  }}
+    </p>
+</form>
 </div>
 </div>
 
