--- a/src/templates/create_pool.html
+++ b/src/templates/create_pool.html
@@ -12,6 +12,7 @@
 <br>
 {{  wtf.quick_form(form)  }}
 <form action=""  method="post" id="selectRace" name="race">
+    {{  form.hidden_tag()  }}
     <p>
         Race: {{  form.races()  }}
     </p>
