--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -16,8 +16,17 @@
                 <h6>Create a Pool for any of the 3 Nascar series or review historical driver data.</h6>
             </div>
         </div>
-        <div>
-            <h4>Join Room:</h4>
+        <table class="table table-striped">
+             <thead class="thead-light">
+              <h4>Join Room:</h4>
+            <tr>
+                <th scope="col">Race ID</th>
+                <th scope="col">Race Name</th>
+
+            </tr>
+        </thead>
+        <tbody>
+
         {% for draft in drafts %}
             <tr>
                 <td>{{ draft['race_id'] }}</td>
@@ -25,7 +34,8 @@
 
             </tr>
             {% endfor %}
-        </div>
+        </tbody>
+        </table>
         <a href="/nascar/pool"><button type="submit" class="btn btn-success" >Create Pool</button></a>
         <a href="/nascar/data"><button type="submit" class="btn btn-success" >Review Data</button></a>
         <a href="/nascar/admin"><button type="submit" class="btn btn-success" >Admin</button></a>
