troubleshooting login email

--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -30,7 +30,7 @@
         {% for draft in drafts %}
             <tr>
                 <td>{{ draft['race_name'] }}</td>
-                <td>{{ draft['room_name'] }}</td>
+                <a href="#"><td>{{ draft['room_name'] }}</td></a>
 
             </tr>
             {% endfor %}
