--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -16,26 +16,28 @@
                 <h6>Create a Pool for any of the 3 Nascar series or review historical driver data.</h6>
             </div>
         </div>
-        <table class="table table-striped">
-             <thead class="thead-light">
-              <h4>Join Room:</h4>
-            <tr>
-                <th scope="col">Race Name</th>
-                <th scope="col">Room Name</th>
+        <div class="container">
+            <table class="w-100">
+                <thead class="thead-light">
+                    <h4>Join Room:</h4>
+                    <tr class="text-center">
+                        <th scope="col">Race Name</th>
+                        <th scope="col">Room Name</th>
 
-            </tr>
-        </thead>
-        <tbody>
+                    </tr>
+                </thead>
+                <tbody>
 
-        {% for draft in drafts %}
-            <tr>
-                <td>{{ draft['race_name'] }}</td>
-                <a href="#"><td>{{ draft['room_name'] }}</td></a>
+                    {% for draft in drafts %}
+                        <tr class="clickable-text center" onclick="/">
+                            <td>{{ draft['race_name'] }}</td>
+                            <td>{{ draft['room_name'] }}</td>
 
-            </tr>
-            {% endfor %}
-        </tbody>
-        </table>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
         <a href="/nascar/pool"><button type="submit" class="btn btn-success" >Create Pool</button></a>
         <a href="/nascar/data"><button type="submit" class="btn btn-success" >Review Data</button></a>
         <a href="/nascar/admin"><button type="submit" class="btn btn-success" >Admin</button></a>
