--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -25,7 +25,7 @@
                 <b>Room Name</b>
             </div>
             {% for draft in drafts %}
-            <div style="border:2px solid black" class="col-12">
+            <div style="border:2px solid black" class="col-6 py-2">
 
                 <a class="row clickable" href="/">
                     <div class="col-5 py-2">{{ draft['race_name'] }}</div>
