troubleshooting login email

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -6,7 +6,7 @@
 <br>
 <h3>Driver List:</h3>
 <ul>
-    {% for driver in driver_list %}
+    {% for driver in drivers %}
         <li>{{  driver['car_num'] }} - {{  driver['drv_full']  }}</li>
     {% endfor %}
 </ul>
