--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <h1>Welcome to Pool: {{room_data.room_name}}</h1>
+<input type="hidden" name="room_id" value="{{  room_data.room_name  }}">
 <br>
 <h3>Driver List:</h3>
 
@@ -135,24 +136,24 @@ $(document).ready(function() {
         document.getElementById('messages').appendChild(newNode);
     });
 
-    $('#series').change(function() {
-        $('#race-races option').remove();
-        $.ajax({
-            type: "GET",
-            url: "/ajax_get_races",
-            processData: "false",
-            data: {series: $('select[name="series"]').val()},
-            dataType:"json",
-            success: function(data) {
-                console.log(data);
-                race_data = '';
-                $.each(data, function() {
-                    //race_id = toString($(this).attr('race_id');
-                    race_data += '<option value=\"' +$(this).attr('race_id')+ '\">'+ $(this).attr('race_name') + ' @ ' + $(this).attr('track') +'</option>';
-                });  // end each
-                $('select[name="race-races"]').append(race_data);
-            }  //end success
-        });  //end ajax
+
+    $('#driver_list-driver option').remove();
+    $.ajax({
+        type: "GET",
+        url: "/ajax_get_drivers",
+        processData: "false",
+        data: {room_id: $('select[name="room_id"]').val()},
+        dataType:"json",
+        success: function(data) {
+            console.log(data);
+            driver_data = '';
+            $.each(data, function() {
+                //race_id = toString($(this).attr('race_id');
+                driver_data += '<option value=\"' +$(this).attr('drv_id')+ '\">'+ $(this).attr('car_num') + ' - ' + $(this).attr('drv_full') +'</option>';
+            });  // end each
+            $('select[name="driver_list-driver"]').append(driver_data);
+        }  //end success
+    });  //end ajax
     });  // end process input
 
 }); //end ready
