troubleshooting login email

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <h1>Welcome to Pool: {{room_data.room_name}}</h1>
+<h3>room id: {{room_data.room_id}}</h3>
 <input type="hidden" name="room_id" value="{{  room_data.room_id  }}">
 <br>
 
