troubleshooting login email

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -138,7 +138,7 @@ $(document).ready(function() {
     });
 
     let boob = $('select[name="room_idA"]').val()
-    console.log(boob)
+    console.log('this shit is: '+ boob)
 
 
     $('#driver_list-driver option').remove();
