troubleshooting login email

--- a/src/templates/create_pool.html
+++ b/src/templates/create_pool.html
@@ -17,6 +17,10 @@
 
 <script>
 $(document).ready(function() {
+
+    let hooey = $('select[name="series"]').val()
+    print('does this work: ' + hooey)
+
     $('#series').change(function() {
         $('#race-races option').remove();
         $.ajax({
