troubleshooting login email

--- a/src/templates/create_pool.html
+++ b/src/templates/create_pool.html
@@ -19,7 +19,7 @@
 $(document).ready(function() {
 
     let hooey = $('select[name="series"]').val()
-    print('does this work: ' + hooey)
+    console.log('does this work: ' + hooey)
 
     $('#series').change(function() {
         $('#race-races option').remove();
