troubleshooting login email

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -137,8 +137,8 @@ $(document).ready(function() {
         document.getElementById('messages').appendChild(newNode);
     });
 
-    let boob = $('#room_idA).val()
-    console.log('this shit is: '+ boob)
+    let boob = $('#room_idA).val();
+    console.log('this shit is: '+ boob);
 
 
     $('#driver_list-driver option').remove();
