--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -137,7 +137,7 @@ $(document).ready(function() {
         document.getElementById('messages').appendChild(newNode);
     });
 
-    let boob = $('#room_idA).val();
+    let boob = $('#room_idA').val();
     console.log('this shit is: '+ boob);
 
 
@@ -146,7 +146,7 @@ $(document).ready(function() {
         type: "GET",
         url: "/ajax_get_drivers",
         processData: "false",
-        data: {room_id: $('#room_idA).val()},
+        data: {room_id: $('#room_idA').val()},
         dataType:"json",
         success: function(data) {
             console.log(data);
