--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -44,7 +44,7 @@
 <h3>Pick List</h3>
 <ul>
     {% for pick in pick_list %}
-        <li>{{  pick }}  }}</li>
+        <li>{{  pick[0] }} rndnum {{ pick[1] }}</li>
     {% endfor %}
 </ul>
 
