--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -41,10 +41,10 @@
     {% endfor %}
 </ul>
 
-<h3>Pick List</h3>
+<h3>Pick Order</h3>
 <ul>
     {% for pick in pick_list %}
-        <li>{{  pick[0] }} rndnum {{ pick[1] }}</li>
+        <li> Pick {{ pick-list[loop.index0]  }} {{  pick[0] }} </li>
     {% endfor %}
 </ul>
 
