troubleshooting login email

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -7,7 +7,10 @@
 <h3>room id: {{room_data._id}}</h3>
 <input type="hidden" id="room_idA" name="room_idA" value="{{  room_data._id  }}">
 <br>
+<div>
+   <a href="#"><button type="submit" class="btn btn-success" >Start Draft</a>
 
+</div>
 
 <div class="formwrapper">
 <div class="page-header" id="View_Pool_Driver_List">
